--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
                                 </div> <!-- single form -->
                                 <p class="form-message"></p>
                                 <div class="single_form">
-                                    <button class="main-btn">Send</button>
+                                    <button class="main-btn" style="border: 2px solid #471035 ;">Enviar</button>
                                 </div> <!-- single form -->
                             </form>
                         </div> <!-- footer form -->
