--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
                             <a href="#">
                                 <img src="assets/images/logo.png" alt="">
                             </a>
-                            <p>Acá te dejo el link a todas mis redes sociales desde donde puedes contactarme.</p>
+                            <p style="color: white">Acá te dejo el link a todas mis redes sociales desde donde puedes contactarme.</p>
                             <ul class="social">
                                 <li><a href="#"><i class="lni lni-facebook-filled"></i></a></li>
                                 <li><a href="#"><i class="lni lni-twitter-original"></i></a></li>
@@ -441,7 +441,7 @@
                             </ul>
                         </div> <!-- footer about -->
                     </div>
-                    <div class="col-lg-5 col-md-12 order-md-3 order-lg-2">
+                    <div class="col-lg-5 col-md-12 order-md-3 order-lg-2" style="color: white">
                         <div class="footer_link_wrapper d-flex flex-wrap">
                             <div class="footer_link mt-45">
                                 <h4 class="footer_title">Quick Link</h4>
@@ -487,7 +487,7 @@
                     </div>
                 </div> <!-- row -->
             </div> <!-- footer wrapper -->
-                 <p class="text-center pb-30">Desarrollado por <a href="https://frako-dev.vercel.app/" target="_blank" rel="nofollow">frakoDev</a> </p>
+                 <p class="text-center pb-30" style="color: white">Desarrollado por <a href="https://frako-dev.vercel.app/"  style="color: #471035"target="_blank" rel="nofollow">frakoDev</a> </p>
         </div> <!-- container -->
     </footer>
 
