ajusta el color en textos

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                             <h4 class="sub_title">Acerca de mi</h4>
                             <h3 class="title">Más de 100 clientes satisfechos de recibir consultoría de valor</h3>
                         </div> <!-- section title -->
-                        <p>Tener más de 100 clientes satisfechos ha sido un gran logro para mi y un testimonio de la
+                        <p style="color: #471035;">Tener más de 100 clientes satisfechos ha sido un gran logro para mi y un testimonio de la
                             calidad de los servicio. La satisfacción de cada cliente ha sido un factor clave para el
                             éxito en mi carrera. construyendo estas relaciones sólidas con mis clientes me ha permitido
                             no solo asesorarlos a ellos sino tambien a sus familiares y amigos permitiendome ayudar a
@@ -345,7 +345,7 @@
                 <div class="col-lg-8">
                     <div class="section_title text-center pb-15">
                         <h4 class="sub_title">Productos Financieros</h4>
-                        <h3 class="title">Ofrezco la mejor asesoría en materia financiera, para que logres todas tus
+                        <h3 class="title" style="color: #471035;">Ofrezco la mejor asesoría en materia financiera, para que logres todas tus
                             metas</h3>
                     </div> <!-- section title -->
                 </div>
