ajusta color de texto

--- a/index.html
+++ b/index.html
@@ -267,9 +267,9 @@
                     <div class="about_content mt-45">
                         <div class="section_title">
                             <h4 class="sub_title">Acerca de mi</h4>
-                            <h3 class="title">Más de 100 clientes satisfechos de recibir consultoría de valor</h3>
+                            <h3 class="title" style="color: #471035;">Más de 100 clientes satisfechos de recibir consultoría de valor</h3>
                         </div> <!-- section title -->
-                        <p style="color: #471035;">Tener más de 100 clientes satisfechos ha sido un gran logro para mi y un testimonio de la
+                        <p >Tener más de 100 clientes satisfechos ha sido un gran logro para mi y un testimonio de la
                             calidad de los servicio. La satisfacción de cada cliente ha sido un factor clave para el
                             éxito en mi carrera. construyendo estas relaciones sólidas con mis clientes me ha permitido
                             no solo asesorarlos a ellos sino tambien a sus familiares y amigos permitiendome ayudar a
