agrega funcionalidad de formulario

--- a/index.html
+++ b/index.html
@@ -235,7 +235,8 @@
                 ¿Porqué solicitar una asesoría financiera?
               </h4>
               <h3 class="title">
-                Las decisiones financieras correctas son la clave para que tengas una vida prospera
+                Las decisiones financieras correctas son la clave para que
+                tengas una vida prospera
               </h3>
             </div>
             <!-- section title -->
@@ -769,9 +770,13 @@
             <div class="col-lg-4 col-md-6 order-md-2 order-lg-3">
               <div class="footer_form mt-45">
                 <h4 class="footer_title">Envíame un mensaje</h4>
-                <form id="contact-form" action="assets/contact.php">
+                <form
+                  id="contact-form"
+                  action="https://formspree.io/f/mgegpvkq"
+                  method="POST"
+                >
                   <div class="single_form">
-                    <input type="text" placeholder="Nomber" name="Name" />
+                    <input type="text" placeholder="Nombre" name="Name" />
                   </div>
                   <!-- single form -->
                   <div class="single_form">
