--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     />
 
     <link rel="stylesheet" href="/floating-whatsapp-chat/whatsapp-chat.css">
-   
+    <script src="/floating-whatsapp-chat/whatsapp-chat.js"></script>
   </head>
 
   <body>
@@ -651,7 +651,7 @@
       </svg>
     </a> -->
 
-    <div id="example"></div><script src="/floating-whatsapp-chat/whatsapp-chat.js"></script>
+    <div id="example"></div>
     <!--====== FOOTER PART START ======-->
 
     <footer id="footer" class="footer_area">
@@ -868,7 +868,7 @@
 
     <!--====== Main js ======-->
     <script src="assets/js/main.js"></script>
-    <script src="/floating-whatsapp-chat/whatsapp-chat.js"></script>
+    
 
     <script type="text/javascript">
         whatsappchat.multipleUser(
