cambia ubicacion de archivos .js y .css de whatsappchat

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="/floating-whatsapp-chat/whatsapp-chat.css">
+    <link rel="stylesheet" href="assets/css/whatsapp-chat.css">
     
   </head>
 
@@ -868,7 +868,7 @@
 
     <!--====== Main js ======-->
     <script src="assets/js/main.js"></script>
-    <script src="/floating-whatsapp-chat/whatsapp-chat.js"></script>
+    <script src="assets/js/whatsapp-chat.js"></script>
 
     <script type="text/javascript">
         whatsappchat.multipleUser(
