--- a/floating-whatsapp-chat/index.html
+++ b/floating-whatsapp-chat/index.html
@@ -9,7 +9,7 @@
     <script type="text/javascript" src="whatsapp-chat.js"></script>
     <link rel="stylesheet" href="whatsapp-chat.css">
     <style>
-html,* { font-family: 'Inter'; box-sizing: border-box; }
+html,* {  box-sizing: border-box; }
 body { background-color: #fafafa; line-height:1.6;background-image: linear-gradient(90deg, rgb(190, 90, 247),rgb(22, 91, 145));}
   .lead { font-size: 1.5rem; font-weight: 300; }
 .container { margin: 150px auto; max-width: 960px; }
